--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,7 @@
 
 </p></b>
 
-<p class="col-md-offset-10">
+<p class="col-md-offset-10 col-sm-offset-2" >
   <span class="sub-text"> <%= @post.username %></span><br>
   <span class="date sub-text"><%= time_ago_in_words(@post.created_at) %> ago</span>
 </p>
@@ -39,7 +39,7 @@
 <div class="actionBox">
   <ul class="commentList">
 
-
+<!--show comments-->
   <% @post.comments.each do |comment| %>
 
     <li>
@@ -82,21 +82,6 @@
       </div>
 
 </div>
-<!--</div>-->
-
-
-
-
-
-    <!--<div class="field">-->
-      <%#= f.label :content %>
-      <!--<%#= f.text_area :content %>-->
-    <!--</div>-->
-    <!---->
-
-    <!--<div class="actions">-->
-      <!--<%#= f.submit %>-->
-    <!--</div>-->
 <% end %>
 </div>
 
