--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -75,6 +75,7 @@
 <% content_for :top do%>
       <!--<button type="button" class="btn btn-default">Default</button>-->
       <%= render 'shared/nav'%>
+    <!--<%#=paginate @posts %>-->
 
 <% end %>
 
