--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -5,6 +5,7 @@
       <% if action_name == "index"%>
 
       <%= link_to ' NewPost', new_post_path ,:class=>"glyphicon glyphicon-plus btn btn-default" %>
+         <div style="float:right"> <%= paginate @posts  %></div>
 
 
           <%else %>
