--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -39,7 +39,7 @@
       <ul class="nav nav-stacked collapse" id="menu2">
         <li><a href="#"><i class="glyphicon glyphicon-bullhorn"></i> Group Name : <%= @group.groupname %></a>
         </li>
-        <li> <a href="#"><i class="glyphicon glyphicon-"></i> Members :<%= @members %></a></li>
+        <li> <a href="#"><i class="glyphicon glyphicon-"></i> Members:<%= @members %></a></li>
         <li><a href="#"> User Name : <%= current_user.username%></a>
         </li>
 
@@ -66,7 +66,7 @@
     <!--<li><a href="#"><i class="glyphicon glyphicon-briefcase"></i> Toolbox</a></li>-->
     <!--<li><a href="#"><i class="glyphicon glyphicon-link"></i> Widgets</a></li>-->
     <!--&lt;!&ndash;<li><a href="#"><i class="glyphicon glyphicon-list-alt"></i> Reports</a></li>&ndash;&gt;-->
-    <li><a href="#"><i class="glyphicon glyphicon-user"></i> Sign in</a></li>
+    <!--<li><a href="#"><i class="glyphicon glyphicon-user"></i> Sign in</a></li>-->
     <li><a href="#"><i class="glyphicon glyphicon-star"></i> Social Media</a></li>
   </ul>
 
