--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <div class="panel panel-default">
 
 
-  <% WelcomeMailer.confirmation_email(user).deliver %>
+  <%# WelcomeMailer.confirmation_email(user).deliver %>
 
   <% @posts.each do |post| %>
 
