--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Todo</title>
+  <title>Kutudo</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container-fluid">
-  <% if controller_name =="users"%>
+  <% if controller_name =="users" or controller_name == "images"%>
       <%=yield %>
 
         <%else%>
@@ -25,8 +25,6 @@
         <%= yield %>
       </div>
 <%end%>
-
-
-    </div>
+</div>
 </body>
 </html>
