--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,19 +4,13 @@
   <!-- Left column -->
 
 <!--<div style="border-color: deepskyblue ; border:2px;">-->
-  <a href="#"><strong><i class="glyphicon glyphicon-wrench"></i> Tools</strong></a>
+  <strong><%= link_to " Home" , posts_path, :class => "glyphicon glyphicon-home" %></strong>
 
   <hr>
 
   <ul class="nav nav-stacked">
     <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#userMenu">List out <i class="glyphicon glyphicon-chevron-down"></i></a>
       <ul class="nav nav-stacked collapse in" id="userMenu">
-
-        <%if action_name=="index"%>
-            <li> <%= link_to " All" , posts_path, :class => "glyphicon glyphicon-home" %></li>
-            <%else%>
-            <li><%= link_to " All" , posts_path, :class => "glyphicon glyphicon-home" %></li>
-            <%end%>
 
         <!--<li><a href="posts? task=1"><i class="glyphicon glyphicon-tasks"></i> Assignment </a>-->
        <li> <%= link_to " Assignment" , posts_path(:sort=> "Assignment"), :class => "glyphicon glyphicon-tasks" %></li>
@@ -49,10 +43,11 @@
 
 
     <li class="nav-header">
-      <a href="#" data-toggle="collapse" data-target="#menu3"> Social Media <i class="glyphicon glyphicon-chevron-right"></i></a>
+      <a href="#" data-toggle="collapse" data-target="#menu3"> Members <i class="glyphicon glyphicon-chevron-right"></i></a>
       <ul class="nav nav-stacked collapse" id="menu3">
-        <li><a href=""><i class="glyphicon glyphicon-circle"></i> Facebook</a></li>
-        <li><a href=""><i class="glyphicon glyphicon-circle"></i> Twitter</a></li>
+        <%User.where("group_id"=>"#{current_user.group_id}").each do |user|%>
+        <li><a href=""><i class="glyphicon glyphicon-user"><%=user.username%></user.></i></a></li>
+        <%end%>
       </ul>
     </li>
   </ul>
@@ -62,11 +57,10 @@
 
   <ul class="nav nav-pills nav-stacked">
     <li class="nav-header"></li>
-    <li><a href="#"><i class="glyphicon glyphicon-list"></i> About </a></li>
+    <li><a href="#"><i class="glyphicon glyphicon-list"></i> About Kutudu </a></li>
 
     <!--<li><a href="#"><i class="glyphicon glyphicon-user"></i> Sign in</a></li>-->
 
-    <li><a href="#"><i class="glyphicon glyphicon-star"></i> Social Media</a></li>
   </ul>
 
 
